# OpenXLSX_cmake_qt_win64_vs2019_dll

./: .gitignore  README.md  main.cpp
cmake-win32/: CMakeLists.txt
feature/easylogging/: my_easylogging.cpp  my_easylogging.h
include/: normal_typedef.h  test.h  test2.hpp
spec/protobuf/: addressbook.pb.cc  addressbook.pb.h  addressbook.proto  build_protoc.bat
src/: test.cpp  test2.cpp
